--- a/client/src/styles/Login.css
+++ b/client/src/styles/Login.css
@@ -57,7 +57,7 @@ text-gold - rgb(131, 78, 0)
 }
 
 .login-input {
-  background-color:rgb(198, 198, 198);
+  background-color:var(--search-bar);
   border-radius: 12px;
   border: 0;
   box-sizing: border-box;
