--- a/client/src/styles/Nav.css
+++ b/client/src/styles/Nav.css
@@ -24,6 +24,7 @@ text-gold - rgb(131, 78, 0);
   width: 100%;
   min-width: 1035px;
   height: 70px;
+  transition: all .5s;
 }
 
 #navbar-logo {
@@ -78,6 +79,7 @@ text-gold - rgb(131, 78, 0);
   height: 40px;
   width: 100%;
   min-width: 1035px;
+  transition: all .5s;
 }
 
 #search-bar {
@@ -91,6 +93,7 @@ text-gold - rgb(131, 78, 0);
   margin-left: 5px;
   padding-left: 5px;
   width: 180px;
+  transition: all .5s;
 }
 
 .toggle-light-mode {
