--- a/client/src/styles/Profile.css
+++ b/client/src/styles/Profile.css
@@ -68,6 +68,7 @@ text-gold - rgb(131, 78, 0)
   max-height: 100%;
   flex-direction: column;
   color: var(--card-text);
+  transition: all .5s;
 }
 
 .profile-details > h3 {
@@ -81,6 +82,7 @@ text-gold - rgb(131, 78, 0)
   max-height: 100%;
   font-size: 13px;
   color: var(--card-text);
+  transition: all .5s;
 }
 
 .right-div {
@@ -99,6 +101,7 @@ text-gold - rgb(131, 78, 0)
     inset 0 1px rgb(104, 104, 104),
     inset 0 -3px 2px rgba(0,0,0,0.25);
   border-radius: 30px;
+  transition: all .5s;
 }
 
 .profile-buttons {
