--- a/client/src/styles/Routines.css
+++ b/client/src/styles/Routines.css
@@ -45,11 +45,8 @@ text-gold - rgb(131, 78, 0)
   min-height: 190px;
   border-radius: 30px;
   margin: 0 20px;
-  box-shadow: 
-  0 0 1px rgba(0, 0, 0, 0.3), 
-  0 3px 7px rgba(0, 0, 0, 0.3), 
-  inset 0 1px rgb(104, 104, 104),
-  inset 0 -3px 2px rgba(0,0,0,0.25);
+  box-shadow: var(--box-shadow);
+  transition: all .5s;
 }
 
 .routine-card:hover {
@@ -75,6 +72,7 @@ text-gold - rgb(131, 78, 0)
   word-wrap: break-word;
   flex-direction: column;
   color: var(--card-text);
+  transition: all .5s;
 }
 
 #card-description-div {
